# gpu-acc-simplex-spolver

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  benchmark_results.csv
archive/: bench_results_180s_gpuv2.txt  time_testing_results_100s_gpu_multi.txt  time_testing_results_20s_gpu_multi.txt  time_testing_results_40s_gpuv0.txt  time_testing_results_40s_gpuv1.txt  time_testing_results_40s_gpuv2.txt
data/: bench_full_log.txt  bench_results_30s.txt  benchmark_results.csv  compare_results_gpu.txt  test_30s_results_cpu.txt  time_results.txt  time_results_6min.txt
results/: bench_full_60s_gpuv2.txt  bench_full_60s_sparse.txt  bench_full_log.txt  bench_full_log_gpuv1_30s.txt  bench_full_log_sparse.txt  bench_full_log_sparse_30s.txt  bench_results_30s_gpuv2.txt  bench_results_30s_sparse.txt  bench_results_60s_gpuv2.txt  bench_results_60s_sparse.txt  bench_results_gpuv1_30s.txt  bench_results_sparse_30s.txt  compare_full_log_cpu.txt  compare_full_log_gpuv0.txt  compare_full_log_gpuv1.txt  compare_full_log_sparse.txt  compare_results_cpu.txt  compare_results_gpuv0.txt  compare_results_gpuv1.txt  full_log.txt  time_30s_results_gpu_.txt  time_testing_results_100s_gpuv0.txt  time_testing_results_100s_gpuv2.txt  time_testing_results_10s_gpuv1.txt  time_testing_results_20s_gpuv0.txt  time_testing_results_20s_gpuv1.txt  time_testing_results_20s_sparse.txt  time_testing_results_30s_gpuv0.txt  time_testing_results_30s_gpuv1.txt  time_testing_results_30s_gpuv1_10.txt  time_testing_results_30s_gpuv1_20.txt  time_testing_results_30s_gpuv2.txt  time_testing_results_30s_sparse.txt  time_testing_results_30s_sparse_10.txt  time_testing_results_40s_gpuv2.txt
results_selection/: bench_full_log_100s_gpuv2.txt  bench_full_log_180s_gpu_multi.txt  bench_full_log_180s_gpuv0.txt  bench_full_log_180s_gpuv1.txt  bench_full_log_60s_gpuv0.txt  bench_full_log_gpuv0.txt  bench_full_log_gpuv1.txt  bench_full_log_sparse.txt  bench_full_loggpuv0.txt  bench_full_loggpuv1.txt  bench_results_100s_gpuv2.txt  bench_results_180s_gpu_multi.txt  bench_results_180s_gpuv0.txt  bench_results_180s_gpuv1.txt  bench_results_30s_gpuv0.txt  bench_results_30s_gpuv1.txt  bench_results_30s_sparse.txt  bench_results_60s_gpuv0.txt  bench_results_60s_gpuv1.txt  full_log_100s_gpu_multi.txt  full_log_20s_gpu_multi.txt  full_log_20s_gpuv2.txt  full_log_20s_sparse.txt  problem_benchmark_set  time_testing_results_100s_gpu_multi.txt  time_testing_results_20s_gpu_multi.txt  time_testing_results_20s_gpuv2.txt  time_testing_results_20s_sparse.txt
scripts/: benchmark.sh  check_feasibility.py  compare_tool.sh  converter.py  cuopt_compiler.sh  testing.sh  testing_execution.sh  visualize_compare_tool.py  visualize_histo.py
src/: CMakeLists.txt  compare.cpp  linalg.cu  linalg_cpu.cu  linalg_cpu.hpp  linalg_gpu.cu  linprog.cpp  linprog.hpp  logging.hpp  main.cpp  solver.hpp  solver_cpu.cpp  solver_gpu.cu  solver_wrapper.cpp  testing.cpp  types.hpp
src/common/: CMakeLists.txt  linprog.cpp  linprog.hpp  logging.cpp  logging.hpp  problem_reader.cpp  problem_reader.hpp  solver.hpp  solver_wrapper.cpp  solver_wrapper.hpp  types.hpp
src/cpu/: CMakeLists.txt  linalg_cpu.cu  linalg_cpu.hpp  solver_cpu.cpp
src/cuopt/: CMakeLists.txt  README.md  base_solver.hpp  lp_example.c  lp_example.sh  solver_cuopt.cpp
src/executables/: CMakeLists.txt  benchmarking.cpp  compare.cpp  compare_netlib.cpp  main.cpp  testing.cpp  testing_execution.cpp
src/gpu/: CMakeLists.txt  base_solver_wrapped.cpp  base_solver_wrapped.hpp  linalg_gpu.cu  linalg_gpu.hpp  solver_gpu.cpp  solver_gpu.cu
src/gpu_multi/: CMakeLists.txt  ProfileUtils.h  linalg_gpu.cu  linalg_gpu.hpp  scale.cu  scale.hpp  solver_gpu.cpp  workspace.cpp  workspace.hpp
src/gpu_v0/: CMakeLists.txt  base_solver_wrapped.cpp  base_solver_wrapped.hpp  linalg_gpu.cu  linalg_gpu.hpp  solver_gpu.cpp
src/gpu_v1/: CMakeLists.txt  linalg_gpu.cu  linalg_gpu.hpp  solver_gpu.cpp
src/gpu_v2/: CMakeLists.txt  linalg_gpu.cu  linalg_gpu.hpp  solver_gpu.cpp
src/sparse/: CMakeLists.txt  linalg_sparse.cu  linalg_sparse.hpp  solver_sparse.cpp
src/test/problem1/: input.txt
src/test/problem2/: input.txt
src/test/problem7/: input.txt
test/problem0/: input.txt
test/problem10/: input.txt
test/problem3/: input.txt
test/problem4/: input.txt
test/problem5/: input.txt
test/problem6/: input.txt
test/problem8/: input.txt
test/problem9/: input.txt
